--- a/index.html
+++ b/index.html
@@ -6,10 +6,9 @@
     <title>美杜鲨 => 个人网站</title>
     <style>
     body{
-      background-size: cover;
+      background-size: 100% 100%;
       background-repeat: no-repeat;
       background-attachment: fixed;
-      /*background-image: url("http://medusa1st.me/images/sunny-1.jpg");*/
     }
     </style>
   </head>
